--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -1,24 +1,43 @@
-/* main.css */
-body {
-    font-family: Arial, sans-serif;
-}
-
 table {
-    width: 100%;
     border-collapse: collapse;
-    margin-top: 20px;
+    border: 2px solid #ccc;
+    font-family: 'Times New Roman', serif;
+    font-size: 14px;
+    letter-spacing: 1px;
+    align-content: center;
+    width: 100%;
 }
 
-th, td {
+caption {
+    caption-side: bottom;
+    padding: 10px;
+    font-weight: bold;
+}
+
+thead,
+tfoot {
+    background-color: #f5f5f5;
+}
+
+th,
+td {
     border: 1px solid #ddd;
-    padding: 8px;
-    text-align: left;
+    padding: 12px 15px;
 }
 
-th {
-    background-color: #f2f2f2;
+td:last-of-type {
+    text-align: center;
 }
 
-tr:hover {
+tbody > tr:nth-of-type(even) {
+    background-color: #f0f0f0;
+}
+
+tfoot th {
+    text-align: right;
+}
+
+tfoot td {
+    font-weight: bold;
     background-color: #f5f5f5;
 }
